package com.example.schedule.interfaces

interface OnRegisterListener {
    fun onRegister()
}