@startuml

title Schedule - Class Diagram

interface BottomRecyclerClickListener {
    onItemClicked()
}

interface Parcelable

interface GetLessonsInterface {
    +onLessonsReady(LessonJsonStructure)
}

interface OnRegisterListener {
    +onRegister()
}



class AppCompatActivity
class Realm
class WeekDayViewHolder{
    -nameOfDayTextView: TextView
    -dateTextView: TextView
    +bind(String, String, BottomRecyclerClickListener)
    +setBackgroundAndTextColor(Int, Int)
}

class BottomRecycleAdapter {
    + allWeekDates: List<Int>
    + context: Context
    + currentDay: Int
    - isSecondWeek: Boolean
    - itemClickListener: BottomRecyclerClickListener
    - initWeekDate()
    + changeCurrentWeekDate()
    +getItemCount(): Int
    +onCreateViewHolder(ViewGroup, Int)
    +onBindViewHolder(WeekDayViewHolder, Int)
}
WeekDayViewHolder --> BottomRecycleAdapter
BottomRecycleAdapter --> MainActivity

class RealmObject

class PairClass {
    + studyroom: String
    + day: Int
    + even: Int
    + group: String
    + lecturer: String
    + number: Int
    + title: String
    + type: Int
    +clear()
    +setFields(PairClass)
    +isEmpty(): Boolean
}
PairClass ..|> Parcelable
PairClass <|-- RealmObject
MainRecyclerAdapter o-- PairClass
BottomRecyclerClickListener --> WeekDayViewHolder
BottomRecyclerClickListener --> BottomRecycleAdapter

class PairViewHolder {
    -itemView: View
    - classTimeTextView: TextView
    - classTitleTextView: TextView
    - typeTextView: TextView
    - lecturerTextView: TextView
    - studyroomTextView: TextView
    - wrapper: ConstraintLayout
    - practiceText: String
    - lectureText: String
    + setVisibility(Int, Int)
    + bind(PairClass, Boolean)
    + setClassTime(String)
}

PairClass -->  PairViewHolder
PairViewHolder --> MainRecyclerAdapter

class MainRecyclerAdapter {
    +pairsData: Array<PairClass>
    +context: Context
    -getLessonTime(int): String
    +getItemCount(): Int
    +onCreateViewHolder(ViewGroup, int)
    +onBindViewHolder(WeekDayViewHolder, int)
}
MainRecyclerAdapter --left> MainActivity

object DatabaseHelper {
- connection: Realm
- versionOfSchedule: Long
- mPreference: SharedPreferences
- context: Context
+init(Context)
+getConnection(): Realm
+setVersion(Long)
+addInformationToDBFromJSON(LessonJsonStructure)
-getRealListFromList(List<String>): RealmList<String>
+getListOfGroupsOrLecturer(Int): List<String>
+deleteAllPairsFromBD()
+getPairsOfGroup(String,  Int,  Int): RealmResults<PairClass>
+getPairsOfLecturer( String,  Int,  Int): RealmResults<PairClass>
+closeConnection()
}

object CalendarHelper {
    +currentDay: Int
    +parity: Int
    +updateCurrentInfo( Int,  Int): Boolean
    -getInstanceOfCurrentDay( Boolean = true): Calendar
    +setNextDay()
    -getDayOfWeek(Calendar = getInstanceOfCurrentDay()): Int
    +initAllWeekDates(): ArrayList<Int>
    -getParityOfWeek(Calendar = getInstanceOfCurrentDay()): Int
    +getDayName(Context, Int): String
    +getNegativeWeek(Int): Int
}

class DownloadController {
    +DownloadController(AppCompatActivity, String)
    +enqueueDownload()
    +checkStoragePermission()
    -requestStoragePermission()
    -getStatus(Context, Long)
    +isDownloading(Context, Long)
}

object URLRequests {
    - REGISTRATION_DEVICE_ERROR: String
    - ALREADY_REGISTERED_ERROR: String
    - PUBLIC_KEY_ERROR: String
    - NEW_VERSION_STATUS: String
    - REQUEST_TIMEOUT_ERROR: String
    -mDispatcher: Dispatcher
    -client: OkHttp
    -isInRegisterProcess: Boolean
    -lastOnRegisterListener: OnRegisterListener?
    +lastDownloadController: DownloadController?
    +getLessonsJSON(Context,GetLessonsInterface,  Boolean = false)
    +checkUpdate(Context)
    -register( Context,  OnRegisterListener?,  Int)
    +getPublicKey(Context, OnRegisterListener?)
    -getEncryptedPreferences(Context): EncryptedSharedPreferences
    -getLessonOnRegisterListener(Context, GetLessonsInterface, Boolean): OnRegisterListener
    -checkUpdateRegisterListener(Context): OnRegisterListener
}
OnRegisterListener-->URLRequests
GetLessonsInterface-->URLRequests
DownloadController-->URLRequests


class MainActivity{
    + bottomRecyclerAdapter: BottomRecycleAdapter
    - realm: Realm
    - mainRecyclerAdapter: MainRecyclerAdapter
    - arrayForMainRecyclerView: Array<PairClass>
    +onCreate(Bundle?)
    +onSaveInstanceState(Bundle)
    -restoreData(Bundle)
    -setMainRecyclerView(Int)
    -setBottomRecyclerView(Int)
    -initBottomRecycler(Int)
    -getMainAdapter(Int): MainRecyclerAdapter
    -preparePairsData(Int, Int): Array<PairClass>
    +onActivityResult(Int, Int, Intent?)
    -onSourceChange()
    +onResume()
    +onItemClicked()
    -updateMainRecyclerView(Int)
}

MainActivity <|-- AppCompatActivity
MainActivity ..right|> BottomRecyclerClickListener
MainActivity ..|> GetLessonsInterface
Realm --> MainActivity
MainActivity o-- PairClass
CalendarHelper --right> MainActivity
DatabaseHelper --right> MainActivity
URLRequests --left> MainActivity

@enduml